--- a/css/tags.css
+++ b/css/tags.css
@@ -6,6 +6,7 @@ td, th {
     border: 1px solid #0b0541;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding: 10px 5px 10px 5px;
 }
 
 table tr:hover {background-color: #25189b;}
@@ -41,11 +42,10 @@ table tr:hover {background-color: #25189b;}
 }
 
 .attributte-table {
-    /* height: auto; */
     background: #13096c;
-    border-radius: 8px;
     align-items: left;
     padding: 1rem 0rem 1rem 1rem;
+    width: 80vw;
 }
 
 .example-code {
@@ -61,7 +61,7 @@ table tr:hover {background-color: #25189b;}
 }
 
 .tag-image-logo {
-    width: 16%;
+    width: 30px;
 }
 
 .output-container {
