(projeto): ajustado nome site

--- a/css/global.css
+++ b/css/global.css
@@ -51,7 +51,7 @@ body {
     padding: 0.4rem;
 }
 
-/* Manual */
+/* Mais */
 .more-container {
     display: flex;
     justify-content: space-between;
